--- a/CO_EV_Transformation.html
+++ b/CO_EV_Transformation.html
@@ -3171,7 +3171,7 @@ vertical-align: -.125em;
 </section>
 <section id="energy-mix-in-transportation" class="level2">
 <h2 class="anchored" data-anchor-id="energy-mix-in-transportation">Energy Mix in Transportation</h2>
-<p>Using the State Energy Data System (SEDS) from the EIA, variables related to energy consumption, production, expenditures, and price can be collected. For this demonstration, data on energy consumption patterns were collected for the state of Colorado using the EIA SEDS <a href="API">https://www.eia.gov/opendata/browser/seds</a>.</p>
+<p>Using the State Energy Data System (SEDS) from the EIA, variables related to energy consumption, production, expenditures, and price can be collected. For this demonstration, data on energy consumption patterns were collected for the state of Colorado using the EIA SEDS <a href="https://www.eia.gov/opendata/browser/seds">API</a>.</p>
 <div class="cell">
 <div class="cell-output-display">
 <div>
@@ -3204,6 +3204,7 @@ vertical-align: -.125em;
 <section id="conclusion" class="level2">
 <h2 class="anchored" data-anchor-id="conclusion">Conclusion</h2>
 <p>This exploratory analysis shows that policy interventions can be aligned early signals of change in transportation-sector GDP and possibly energy consumption patterns. While causality cannot yet be established, the groundwork is now laid for a deeper investigation. With the addition of more variables, further modeling could test whether these legislative milestones significantly influenced electrification and economic output shifts.</p>
+<p>Please visit the <a href="https://github.com/jpfurman/Colorado-Tranportation-Transition.git">GitHub page</a> for information related to this file code and its accompanying data.</p>
 </section>
 
 </main>
